--- a/backend/package.json
+++ b/backend/package.json
@@ -9,5 +9,13 @@
   "keywords": [],
   "author": "",
   "type": "module",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "jose": "^6.1.2",
+    "jsonwebtoken": "^7.4.1",
+    "nodemon": "^3.1.11",
+    "uuid": "^13.0.0"
+  }
 }
