--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,10 @@
   "type": "module",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "jose": "^6.1.2",
-    "jsonwebtoken": "^7.4.1",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.11",
     "uuid": "^13.0.0"
   }
